# NMPPTU-Team1-SAAQP

./: .env  .gitignore  README.md
implementation/: .gitignore  README.md  pyproject.toml
implementation/notebooks/: example_1.ipynb  example_2.ipynb  example_3.ipynb  multivariable_logistic_regression.ipynb  nn_compare_results.ipynb  nn_run_experiments.ipynb  supervised_feature_selection.ipynb
implementation/notebooks/results/runs/: sgd_fixed_lr=0.01.pkl  sgd_multistep_lr=0.1.pkl  sgda_lr0.5+2warmup.pkl  sgda_lr0.5+no_warmup.pkl
implementation/output/logs/ex_5.2/: Dataset=mushrooms.txt
implementation/src/algorithms/: __init__.py  gd.py  gd_lipchitz.py  gd_lipschitz.py  gda.py  nesterov.py  rnn.py  sgda.py
implementation/src/algorithms/datasets/: libsvm_loader.py
implementation/src/algorithms/nn/: __init__.py  trainers.py  utils.py
implementation/src/algorithms/nn/optim/: __init__.py  sgda.py
implementation/src/algorithms/utils/: __init__.py  constraint.py  metrics.py  optimization_result.py  projector.py  typing.py
implementation/src/examples/: example4_problem.py  exp_multivariable_logistic_regression.py  run_example4_gda.py  run_example4_rnn.py
implementation/tests/: ex1_gd.py  ex1_gda.py  ex1_nonconvex.py  ex2_gd.py  ex2_gda.py  ex2_nonsmooth.py  ex3.py  example_3.py  example_3.txt  example_3_lipchitz_independent_step_size.py  example_3_lipchitz_independent_step_size.txt  exp_multivariable_logistic_regression.py  plot_ex1.py  plot_ex1_gd.py  plot_ex1_gda.py  plot_ex2.py  plot_ex2_gd.py  plot_ex2_gda.py  test_gda.py  test_projector.py
implementation/tests/examples/: ex2_nonsmooth.py
(+11 files in other folders)
