[project]
name = "algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kilkuwu", email = "iamkilkuwu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "autograd>=1.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
